--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,14 +11,28 @@ authors = ["Conrad Leonard <conrad@biocommons.org.au>"]
 package-mode = false  # no wheel needed; test harness only
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10"
+
+[tool.poetry.group.test.dependencies]
+python = ">=3.10"
 pytest = ">=8.2"
 pytest-playwright = ">=0.5.0"
+pytest-html = ">=4.0"
 playwright = ">=1.46.0"
 python-dotenv = ">=1.0"
 pydantic = ">=2.6"
 pydantic-settings = ">=2.2"
 
 [tool.pytest.ini_options]
+addopts = [
+    "-q",
+    "--color=yes",
+    "--browser=chromium",
+    "--html=playwright-report/report.html",
+    "--self-contained-html",
+]
+markers = [
+    "smoke: is the data commons live",
+    "datamodel: depends on details of data model (deselect with '-m \"not datamodel\"')",
+]
 testpaths = ["tests"]
-addopts = ["-q", "--maxfail=1", "--color=yes"]
