--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,8 @@ addopts = [
     "--self-contained-html",
 ]
 markers = [
+    "auth0: depends on detailed configuration of Auth0 identity provider",
+    "datamodel: depends on details of data model",
     "smoke: is the data commons live",
-    "datamodel: depends on details of data model (deselect with '-m \"not datamodel\"')",
 ]
 testpaths = ["tests"]
