--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -57,6 +57,7 @@ jobs:
         with:
           name: playwright-report
           path: playwright-report/
+          overwrite: true
           retention-days: 30
 
   deploy-pages:
