--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ python = ">=3.10"
 pytest = ">=8.2"
 pytest-playwright = ">=0.5.0"
 pytest-html = ">=4.0"
-playwright = ">=1.46.0"
+playwright = "==1.55.0"
 python-dotenv = ">=1.0"
 pydantic = ">=2.6"
 pydantic-settings = ">=2.2"
