always publish reports even when tests fail (this is the whole point, after all)

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -48,6 +48,7 @@ jobs:
     name: Publish report to GitHub Pages
     needs: tests
     runs-on: ubuntu-latest
+    if: ${{ always() }}
     steps:
 
       - name: Install jq (for reading metadata)
